[gd_scene load_steps=8 format=2]

[ext_resource path="res://BungeeShade-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://empty_style.tres" type="StyleBox" id=2]
[ext_resource path="res://Bungee-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="main_ui" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="main_ui"]
margin_top = 202.0
margin_right = 600.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "minesweeper"
align = 1
valign = 1
percent_visible = -0.0909091
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_size" type="Label" parent="main_ui"]
margin_top = 267.0
margin_right = 600.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "select size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size_options" type="VBoxContainer" parent="main_ui"]
margin_top = 312.0
margin_right = 600.0
margin_bottom = 398.0
alignment = 1

[node name="small" type="Button" parent="main_ui/size_options"]
margin_right = 600.0
margin_bottom = 26.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 0.784314, 0.929412, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.517647, 0.890196, 1 )
text = "small"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medium" type="Button" parent="main_ui/size_options"]
margin_top = 30.0
margin_right = 600.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 0.784314, 0.929412, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.517647, 0.890196, 1 )
text = "medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="large" type="Button" parent="main_ui/size_options"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 86.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 0.784314, 0.929412, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.517647, 0.890196, 1 )
text = "large"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="main_ui/size_options/small" to="." method="_on_small_pressed"]
[connection signal="pressed" from="main_ui/size_options/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="main_ui/size_options/large" to="." method="_on_large_pressed"]
